[gd_scene load_steps=6 format=3 uid="uid://bmwpgcvs2frva"]

[ext_resource type="Theme" uid="uid://w4x6oqbilshs" path="res://themes/theme.tres" id="1_6fi4d"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_tck17"]
[ext_resource type="PackedScene" uid="uid://bosg1lufqjpci" path="res://objects/camera_shake.tscn" id="3_xqlbu"]
[ext_resource type="AudioStream" uid="uid://d0b52bckrl5xd" path="res://sounds/changeTheme.wav" id="4_b8r6r"]
[ext_resource type="AudioStream" uid="uid://cfpef4lbo4k38" path="res://music/mainMenu.ogg" id="5_qanvo"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6fi4d")
script = ExtResource("1_tck17")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -38.0
offset_right = 190.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
text = "LudumDare51"

[node name="Camera2d" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="CameraShake" parent="Camera2d" instance=ExtResource("3_xqlbu")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_b8r6r")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_qanvo")
autoplay = true

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.5
offset_top = 35.5
offset_right = 96.5
offset_bottom = 76.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Play"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
